I added some fancy new lines of code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="headers.css">
+    <link rel="stylesheet" href="nav.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>My App with Styles</h1>
+    <h1>My App with Styles except now there is a change and wow look at that changes wooohie</h1>
 </body>
+
 </html>
